@@ -5,7 +5,6 @@ SUBDIRS = xflr5-engine \
 	xflr5-gui
 
 
-
 TRANSLATIONS = translations/xflr5v6.ts \
 	translations/xflr5v6_de.ts \
 	translations/xflr5v6_fr.ts \
@@ -16,3 +15,4 @@ OTHER_FILES += doc/ReleaseNotes.txt \
 	qss/appwidget.css \
 	qss/xflr5_style.qss \
 	qss/default.qss
+ 
